todo-backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: todo-backend
  namespace: default
  labels:
    app: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: 'teghitsugaya/todo-backend:v3'
