todo-frontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: todo-frontend
  namespace: default
  labels:
    app: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: 'teghitsugaya/todo-f:v2'
