postgresdb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
