todo-backend-services.yaml
kind: Service
apiVersion: v1
metadata:
  name: todo-backend
  namespace: default
  labels:
    app: todo-backend
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: todo-backend
  type: ClusterIP
